--- a/src/css/go-main.css
+++ b/src/css/go-main.css
@@ -1434,6 +1434,30 @@ body.active {
   display: none !important;
 }
 
+table,
+td,
+th {
+  border: 1px solid #eeeef0;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  border-width: 1px 0 0 1px;
+  margin: 0 0 1.5em;
+  width: 100%;
+}
+
+th {
+  font-weight: 700;
+}
+
+td,
+th {
+  padding: 8px;
+  border-width: 0 1px 1px 0;
+}
+
 .btn {
   position: relative;
   background-color: #c2995e;
