--- a/src/css/scss/_tourfic.scss
+++ b/src/css/scss/_tourfic.scss
@@ -138,3 +138,27 @@
     display: none !important;
   }
 }
+
+table,
+td,
+th {
+  border: 1px solid $gray;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  border-width: 1px 0 0 1px;
+  margin: 0 0 1.5em;
+  width: 100%;
+}
+
+th {
+  font-weight: 700;
+}
+
+td,
+th {
+  padding: 8px;
+  border-width: 0 1px 1px 0;
+}
