--- a/blocks/hero/hero.scss
+++ b/blocks/hero/hero.scss
@@ -3,7 +3,7 @@
 @import "../../src/css/scss/global";
 
 .hero {
-  background-color: red;
+  // background-color: red;
   width: 100vw;
   margin-left: -50vw;
   left: 50%;
