--- a/src/css/go-main.css
+++ b/src/css/go-main.css
@@ -1458,6 +1458,11 @@ th {
   border-width: 0 1px 1px 0;
 }
 
+.hero-right {
+  max-width: 100%;
+  width: 100%;
+}
+
 .btn {
   position: relative;
   background-color: #c2995e;
