--- a/src/css/scss/_form.scss
+++ b/src/css/scss/_form.scss
@@ -10,9 +10,9 @@
   align-items: center;
   gap: 20px;
 
-  ::placeholder {
-    // color: #fff !important;
-  }
+  // ::placeholder {
+  //   // color: #fff !important;
+  // }
   .wpcf7-form-control-wrap {
     width: 100%;
     padding-right: 15px;
