--- a/src/css/scss/_header.scss
+++ b/src/css/scss/_header.scss
@@ -3,7 +3,7 @@
   background-color: $main2;
   border-bottom: 1px solid $gray;
   // position: fixed;
-  z-index: 99;
+  z-index: 999999999;
   width: 100%;
   top: 0px;
   .header__bottom {
