--- a/src/css/go-main.css
+++ b/src/css/go-main.css
@@ -484,7 +484,7 @@ body.active {
   transition: all 0.3s linear;
   background-color: #0d559c;
   border-bottom: 1px solid #eeeef0;
-  z-index: 99;
+  z-index: 999999999;
   width: 100%;
   top: 0px;
 }
@@ -1461,6 +1461,10 @@ th {
 .hero-right {
   max-width: 100%;
   width: 100%;
+}
+
+.tf-template-global .tf-section-title {
+  margin-bottom: 30px;
 }
 
 .btn {
