--- a/src/css/scss/_tourfic.scss
+++ b/src/css/scss/_tourfic.scss
@@ -171,3 +171,19 @@ th {
 .tf-template-global .tf-section-title {
   margin-bottom: 30px;
 }
+
+.tf-archive-features {
+  ul {
+    span {
+      display: none;
+    }
+  }
+}
+
+.tf-room-description-box {
+  ul {
+    span {
+      display: none;
+    }
+  }
+}
