--- a/src/css/scss/_tourfic.scss
+++ b/src/css/scss/_tourfic.scss
@@ -187,3 +187,50 @@ th {
     }
   }
 }
+
+.tf-room {
+  display: none !important;
+}
+
+#tf-ask-question-trigger {
+  display: none;
+}
+.reserve .price-per-night {
+  margin-bottom: 20px;
+}
+
+// modal
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  position: absolute;
+  width: 95%;
+  max-width: 900px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.reset-button {
+  margin-top: 20px;
+  text-align: center;
+}
