--- a/src/css/go-admin.css
+++ b/src/css/go-admin.css
@@ -659,4 +659,9 @@ html :where(.wp-block)[data-align=left],
 html :where(.wp-block)[data-align=right] {
   width: 100%;
   height: initial !important;
+}
+
+#header {
+  top: 32px !important;
+  z-index: 99 !important;
 }/*# sourceMappingURL=go-admin.css.map */
