--- a/src/css/go-tf-vendor.css
+++ b/src/css/go-tf-vendor.css
@@ -23,7 +23,9 @@
   display: none !important;
 }
 
-#general {
+#general,
+#menu-dashboard,
+#wp-admin-bar-wp-logo {
   display: none !important;
 }
 
