--- a/src/css/scss/_global.scss
+++ b/src/css/scss/_global.scss
@@ -124,3 +124,10 @@ body.active {
   width: 100%;
   gap: 10px;
 }
+
+.admin-bar {
+  #header {
+    top: 32px !important;
+    z-index: 99 !important;
+  }
+}
