--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -266,6 +266,11 @@ body.active {
   gap: 10px;
 }
 
+.admin-bar #header {
+  top: 32px !important;
+  z-index: 99 !important;
+}
+
 .hero {
   width: 100vw;
   margin-left: -50vw;
