--- a/src/css/go-main.css
+++ b/src/css/go-main.css
@@ -1495,21 +1495,23 @@ th {
 .modal {
   display: none;
   position: fixed;
-  z-index: 9999;
+  z-index: 99999999999;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  overflow-y: auto;
 }
 
 .modal-content {
   position: absolute;
   width: 95%;
   max-width: 900px;
-  top: 50%;
+  margin-bottom: 50px;
+  top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 100px);
   background-color: white;
   padding: 20px;
   border-radius: 5px;
